# python-was

./: .clang-format  .gitignore  README.md  meson.build
debian/: changelog  control  rules
src/: HttpServer.hxx  http.cxx  http.hxx  main.cpp  main.cxx  python.cpp  python.cxx  python.hxx  test.cpp  was.cxx  was.hxx  wsgi.cpp  wsgi.cxx  wsgi.hxx
testapp/: hello.py
